--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -19,6 +19,7 @@
 
   a {
     color: @white-color;
+
     &:focus {
       .tab-focus-v2();
     }
@@ -62,7 +63,7 @@
 
 .ccc-list > li {
   border: 1px solid @gray-888;
-  padding: 0 @grid-gutter-by-half @grid-gutter-by-half @grid-gutter-by-half;
+  padding: 0 @grid-gutter-by-half @grid-gutter-by-half;
   border-radius: @border-radius-base;
 
   & + li {
@@ -71,6 +72,10 @@
 }
 
 .ccc-select-title {
+  background: transparent;
+  border: 0;
+  color: @white-color;
+  padding: 0;
   font-size: 18px;
   margin-top: 0;
   @media all and (min-width: @screen-sm-min) {
@@ -206,6 +211,7 @@
     text-transform: capitalize;
     font-size: 14px;
     padding: 10px;
+
     &:focus {
       .tab-focus-v2();
     }
