--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -208,7 +208,7 @@
 
   button {
     font-weight: 700;
-    text-transform: capitalize;
+    text-transform: unset;
     font-size: 14px;
     padding: 10px;
 
@@ -217,7 +217,7 @@
     }
 
     &:first-child {
-      margin-right: @grid-gutter-by-half;
+      margin-right: 20px;
     }
     @media (min-width: @screen-sm-min) {
       font-size: 18px;
