Cookie popup buttons

--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -15,10 +15,10 @@
             <span class="sr-only">Acceptér eller afslå cookies</span>
             <span class="checkmark"></span>
           </label>
-          <div class="ccc-select" data-select="statistics">
-            <button class="ccc-select-title">Statistik (<span class="stat-count">3</span>)</button>
+          <button class="ccc-select" data-select="statistics">
+            <div class="ccc-select-title">Statistik (<span class="stat-count">3</span>)</div>
             <p>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</p>
-          </div>
+          </button>
         </div>
         <div class="ccc-table-wrapper" data-select="statistics">
           <table class="table table-striped ccc-table">
@@ -57,10 +57,10 @@
             <span class="sr-only">Acceptér eller afslå cookies</span>
             <span class="checkmark"></span>
           </label>
-          <div class="ccc-select" data-select="marketing">
-            <button class="ccc-select-title">Markedsføring (<span class="market-count">31</span>)</button>
+          <button class="ccc-select" data-select="marketing">
+            <div class="ccc-select-title">Markedsføring (<span class="market-count">31</span>)</div>
             <p>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</p>
-          </div>
+          </button>
         </div>
         <div class="ccc-table-wrapper" data-select="marketing">
           <table class="table table-striped ccc-table">
