New cookie button markup

--- a/docs/_includes/components/ku-cookie-popup.html
+++ b/docs/_includes/components/ku-cookie-popup.html
@@ -16,8 +16,8 @@
             <span class="checkmark"></span>
           </label>
           <button class="ccc-select" data-select="statistics">
-            <div class="ccc-select-title">Statistik (<span class="stat-count">3</span>)</div>
-            <p>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</p>
+            <span class="ccc-select-title">Statistik (<span class="stat-count">3</span>)</span>
+            <span>Universitetet bruger forskellige produkter til at registrere brugernes adfærd på hjemmesiden med det formål løbende at forbedre vores service.</span>
           </button>
         </div>
         <div class="ccc-table-wrapper" data-select="statistics">
@@ -58,8 +58,8 @@
             <span class="checkmark"></span>
           </label>
           <button class="ccc-select" data-select="marketing">
-            <div class="ccc-select-title">Markedsføring (<span class="market-count">31</span>)</div>
-            <p>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</p>
+            <span class="ccc-select-title">Markedsføring (<span class="market-count">31</span>)</span>
+            <span>Universitetet bruger forskellige produkter til at markedsføre uddannelser, kurser, konferencer og udstillinger i søgemaskiner samt på hjemmeider og sociale medier med det formål at kunne give dig det mest relevante tilbud.</span>
           </button>
         </div>
         <div class="ccc-table-wrapper" data-select="marketing">
