--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -212,7 +212,7 @@
 
   button {
     font-weight: 700;
-    text-transform: unset;
+    text-transform: none;
     font-size: 14px;
     padding: 10px;
 
