--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -85,7 +85,7 @@
   letter-spacing: 0.7px;
   position: relative;
   width: 100%;
-  padding-right: @grid-gutter-width;
+  padding: 0 @grid-gutter-width 0 0;
   color: @white-color;
   background: transparent;
   border: 0;
