--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5794,8 +5794,8 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 }
 
 /* Remove shortly */
-/* New subsite editing interface */
-/* #webstedinfo {
+/* New subsite editing interface - comment for cmstest01*/
+#webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -5867,5 +5867,5 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-} */
+}
 /* end */
