--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -1684,7 +1684,7 @@ h1.obvius-logo img {
 .obvius-common #sidebar {
   float: left;
   width: 235px;
-  margin-left: 19px;
+  margin-left: 26px;
   padding: 0;
   font-family: 'Open Sans', arial, sans-serif;
   font-size: 13px;
@@ -5581,7 +5581,7 @@ audio, video {
 }
 
 /* Target Bootstrap */
-#obarea4>#obarea2+#obarea3 .obvius-common #content-wrapper {
+#obarea4>#obarea2+#obarea3 .obvius-common .subsite-settings #content-wrapper {
   width: auto;
 }
 
@@ -5795,7 +5795,7 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -5867,5 +5867,5 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
 /* end */
