--- a/docs/assets/css/doctypes/medarbejderoversigt.css
+++ b/docs/assets/css/doctypes/medarbejderoversigt.css
@@ -2,15 +2,16 @@
 /* Datatables */
 @import url("../datatables.min.css");
 
-#medarbejdertable_wrapper {
+.dataTables_wrapper {
   margin-top: 10px;
 }
 
-#medarbejdertable tr th {
+.medarbejdertable tr th, #medarbejdertable tr th {
   white-space: nowrap;
   border-bottom: 0;
 }
 
+.medarbejdertable tr th input:placeholder-shown,
 #medarbejdertable tr th input:placeholder-shown {
   text-overflow: ellipsis;
 }
@@ -20,13 +21,15 @@
     width: 25%;
   }
 
-  .emplistworkarea + .emplistphone {
+  .emplistworkarea+.emplistphone {
     width: 20%;
   }
-  .emplistworkarea + .emplistphone + .emplistemail {
+
+  .emplistworkarea+.emplistphone+.emplistemail {
     width: 10%;
   }
-  .emplisttitle + .emplistphone + .emplistemail {
+
+  .emplisttitle+.emplistphone+.emplistemail {
     width: 12%;
   }
 }
@@ -72,6 +75,6 @@ th.emplistimage:after, th.emplistemail:after {
 }
 
 .portal_list h2.title {
-    line-height: 14px;
-    font-size: 13px!important;
+  line-height: 14px;
+  font-size: 13px !important;
 }
