--- a/less/navs.less
+++ b/less/navs.less
@@ -97,10 +97,12 @@
 
 .nav-pills,
 .nav-tabs {
-  // KU specific
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  @media (min-width: @screen-sm-min) {
+    // KU specific
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 
   > li {
     flex: 1;
@@ -126,13 +128,13 @@
     // Active state, and its :hover to override normal :hover
     &.active > a {
       & {
-        border-top: 1px solid @nav-tabs-active-link-hover-border-color;
-        border-right: 1px solid @nav-tabs-active-link-hover-border-color;
-        border-left: 1px solid @nav-tabs-active-link-hover-border-color;
+        border: 1px solid @nav-tabs-active-link-hover-border-color;
         background-color: @nav-tabs-active-link-hover-bg;
         color: @nav-tabs-active-link-hover-color;
-        border-bottom-color: transparent;
         cursor: default;
+        @media (min-width: @screen-sm-min) {
+          border-bottom-color: transparent;
+        }
       }
     }
 
