--- a/less/navs.less
+++ b/less/navs.less
@@ -113,6 +113,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      border-bottom: 1px solid @nav-tabs-active-link-hover-border-color;
       background-color: @gray-light;
       color: @white-color;
       font-weight: 600;
@@ -129,9 +130,11 @@
     &.active > a {
       & {
         border: 1px solid @nav-tabs-active-link-hover-border-color;
+        border-right: 1px solid @nav-tabs-active-link-hover-border-color;
+        border-left: 1px solid @nav-tabs-active-link-hover-border-color;
         background-color: @nav-tabs-active-link-hover-bg;
-        color: @nav-tabs-active-link-hover-color;
         cursor: default;
+        color: @nav-tabs-active-link-hover-color;
         @media (min-width: @screen-sm-min) {
           border-bottom-color: transparent;
         }
