--- a/less/navs.less
+++ b/less/navs.less
@@ -115,6 +115,7 @@
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
+      border-bottom: 1px solid @nav-tabs-active-link-hover-border-color;
       background-color: @gray-light;
       color: @white-color;
       font-weight: 600;
