Search result page

--- a/less/ku-searchresult-list.less
+++ b/less/ku-searchresult-list.less
@@ -12,6 +12,7 @@
 
   .tile-header {
     order: 1;
+    font-size: 16px;
     color: #165aad;
     letter-spacing: initial;
     white-space: initial;
@@ -22,6 +23,7 @@
   .header-small {
     color: #00802b;
     flex-basis: auto;
+    text-overflow: initial;
     text-transform: lowercase;
     font-weight: 600;
     line-height: 1.33333;
@@ -29,5 +31,7 @@
 
   .tile-body {
     order: 3;
+    color: @text-color;
+    display: block!important;
   }
 }
