Search result page

--- a/less/ku-searchresult-list.less
+++ b/less/ku-searchresult-list.less
@@ -1,6 +1,12 @@
 // GCSE search page
 
 .global-search-results {
+  .tilebox {
+    &:first-child {
+      padding-top: 0;
+    }
+  }
+
   .tile-content {
     display: flex;
     flex-direction: column;
