Search result page

--- a/less/ku-searchresult-list.less
+++ b/less/ku-searchresult-list.less
@@ -4,6 +4,8 @@
   margin-bottom: 10px;
 
   .tilebox {
+    border-bottom: 0;
+
     &:first-child {
       padding-top: 0;
     }
@@ -20,7 +22,7 @@
 
   .tile-header {
     order: 1;
-    font-size: 15px;
+    font-size: 14px;
     color: #165aad;
     letter-spacing: initial;
     margin-bottom: 5px;
@@ -32,7 +34,7 @@
     text-overflow: initial;
     white-space: initial;
     text-transform: lowercase;
-    font-weight: 600;
+    font-weight: 400;
     line-height: 1.33333;
   }
 
