Search result page

--- a/less/ku-searchresult-list.less
+++ b/less/ku-searchresult-list.less
@@ -43,8 +43,10 @@
     color: @text-color;
     display: block!important;
   }
+}
 
+.global-search-result-page {
   .alert {
-    margin-top: @grid-gutter-by-half;
+    margin-top: 13px;
   }
 }
