--- a/less/ku-searchresult-list.less
+++ b/less/ku-searchresult-list.less
@@ -7,7 +7,7 @@
     border-bottom: 0;
 
     &:first-child {
-      padding-top: 0;
+      border-top: 1px solid @gray;
     }
   }
 
@@ -28,6 +28,10 @@
     margin-bottom: 5px;
   }
 
+  .tile-header > strong {
+    font-weight: bold;
+  }
+
   .header-small {
     color: #00802b;
     flex-basis: auto;
@@ -35,7 +39,7 @@
     white-space: initial;
     text-transform: lowercase;
     font-weight: 400;
-    line-height: 1.33333;
+    line-height: @line-height-small;
   }
 
   .tile-body {
@@ -47,6 +51,6 @@
 
 .global-search-result-page {
   .alert {
-    margin-top: 13px;
+    margin-top: @grid-gutter-by-half;
   }
 }
