--- a/less/ku-searchresult-list.less
+++ b/less/ku-searchresult-list.less
@@ -4,7 +4,7 @@
   margin-bottom: 10px;
 
   .tilebox {
-    padding-bottom: 0;
+    padding-bottom: 5px;
     border-bottom: 0;
 
     &:first-child {
