--- a/less/navs.less
+++ b/less/navs.less
@@ -122,10 +122,27 @@
       line-height: @line-height-base;
       border-radius: @nav-tabs-border-radius;
       text-decoration: none;
+      position: relative;
 
       &:focus {
         .tab-focus-v2();
         outline-offset: -2px;
+      }
+      @media (max-width: @screen-xs-max) {
+        &:not([data-toggle="dropdown"]) {
+          padding-right: 30px;
+          &:before {
+            .glyphicon;
+            content: "\002b";
+            font-size: 12px;
+            color: inherit;
+            position: absolute;
+            top: 12px;
+            right: 7px;
+            width: 17px;
+            overflow: hidden;
+          }
+        }
       }
     }
     // Active state, and its :hover to override normal :hover
@@ -136,7 +153,15 @@
         cursor: default;
         color: @nav-tabs-active-link-hover-color;
         @media (min-width: @screen-sm-min) {
-          border-bottom-color: transparent;
+          border-bottom: 0;
+        }
+      }
+      @media (max-width: @screen-xs-max) {
+        &:not([data-toggle="dropdown"]) {
+          &:before {
+            content: "\2212";
+            right: 7px;
+          }
         }
       }
     }
