--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5793,6 +5793,11 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
   margin-right: 15px;
 }
 
+.configtable td textarea:-moz-read-only {
+  cursor: not-allowed;
+  background-color: #efefef;
+}
+
 .configtable td textarea:read-only {
   cursor: not-allowed;
   background-color: #efefef;
@@ -5800,7 +5805,7 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 /* Remove shortly */
 /* New subsite editing interface - comment for cmstest01*/
-#webstedinfo {
+/* #webstedinfo {
   position: absolute;
   right: 0;
   width: 23em;
@@ -5872,5 +5877,6 @@ textarea[id*="extra_html_head"], textarea[id*="extra_html_body"] {
 
 #webstedinfo div.no-website-spacer {
   height: 2.5em;
-}
+} */
+
 /* end */
