--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -269,7 +269,7 @@ html:lang(en) .ku-branding-text {
     height: 47%;
     position: absolute;
     top: 15px;
-    right: 0;
+    right: 1px;
     background-color: #666;
   }
 
