Local search form styling

--- a/less/panels.less
+++ b/less/panels.less
@@ -19,7 +19,7 @@
   padding: @panel-body-padding;
   &:extend(.clearfix all);
 
-  & > ul {
+  & > ul, form {
     &:first-child {
       margin-top: 10px;
     }
