--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -10,6 +10,7 @@
   background-color: rgba(@ku-cookiebox-bg, .96);
   overflow-y: scroll;
   max-height: 100%;
+  width: 100%;
   z-index: (@zindex-modal + 1);
   transform: translate3d(0, 0, 0); // Prevent jumping on Android
   backface-visibility: hidden; // Prevent jumping on Android
