Cookie popup width

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -42,7 +42,7 @@
 
 #ccc-title {
   font-size: 26px;
-  line-height: 1.3;
+  line-height: @line-height-small;
   margin-top: @grid-gutter-by-half;
 }
 
