Cookie popup breakpoints

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -35,7 +35,7 @@
 .ccc-popup {
   height: 100%;
   padding-bottom: @grid-gutter-height;
-  @media all and (min-width: @screen-sm-min) {
+  @media all and (min-width: @screen-sm-max) {
     padding: @grid-gutter-height 100px floor((@grid-gutter-width * 2)) 100px;
   }
 }
@@ -48,7 +48,7 @@
 
 #ccc-desc {
   font-size: 16px;
-  @media all and (min-width: @screen-sm-min) {
+  @media all and (min-width: @screen-sm-max) {
     font-size: 18px;
     letter-spacing: 0.7px;
     margin-bottom: 30px;
@@ -76,7 +76,7 @@
   font-size: 18px;
   margin-top: 0;
   display: block;
-  @media all and (min-width: @screen-sm-min) {
+  @media all and (min-width: @screen-sm-max) {
     font-size: 20px;
   }
 }
@@ -206,7 +206,7 @@
 }
 
 .ccc-buttons {
-  @media (min-width: @screen-sm-min) {
+  @media (min-width: @screen-sm-max) {
     margin-top: 45px;
   }
 
@@ -223,7 +223,7 @@
     &:first-child {
       margin-right: 20px;
     }
-    @media (min-width: @screen-sm-min) {
+    @media (min-width: @screen-sm-max) {
       font-size: 18px;
       padding: 10px 25px;
 
