Cookie popup iOS

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -188,10 +188,12 @@
 .ccc-table-wrapper {
   display: none;
   height: 218px;
+  position: relative;
   overflow-y: scroll;
   overflow-x: auto;
   background-color: @white-color;
   transition: height 0.4s ease;
+  -webkit-overflow-scrolling: touch;
 }
 
 .ccc-table {
