--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -202,6 +202,14 @@
   background-color: @white-color;
 }
 
+.ccc-table {
+  & > tr {
+    & > td {
+      word-break: break-all;
+    }
+  }
+}
+
 .ccc-table-ani-enter,
 .ccc-table-ani-leave-to {
   height: 0;
