Fix h1 on gridforsider

--- a/docs/assets/css/doctypes/gridforside.css
+++ b/docs/assets/css/doctypes/gridforside.css
@@ -15,10 +15,10 @@
   margin-top: 0;
 }
 
-.h1,
+/* .h1,
 h1 {
   margin-top: 20px;
-}
+} */
 
 .double-column .gridnyhed .nyhed-teaser {
   display: block;
