--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -190,7 +190,7 @@
   height: 218px;
   position: relative;
   overflow-y: scroll;
-  overflow-x: auto;
+  // overflow-x: auto;
   background-color: @white-color;
   transition: height 0.4s ease;
   -webkit-overflow-scrolling: touch;
@@ -223,7 +223,6 @@
   }
 
   button {
-    font-weight: 700;
     text-transform: none;
     font-size: 14px;
     padding: 10px;
