--- a/docs/assets/css/multiple-select/multiple-select.css
+++ b/docs/assets/css/multiple-select/multiple-select.css
@@ -39,16 +39,18 @@
   white-space: nowrap;
   line-height: 30px;
   color: #252525;
+  border-radius: 2px;
   text-decoration: none;
   background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, .075) inset;
+  border: 1px solid #bbb;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
 .ms-choice.disabled {
-  background-color: #f4f4f4;
+  background-color: #eee;
   background-image: none;
-  border: 1px solid #ddd;
+  border: 1px solid #bbb;
   cursor: default;
 }
 
@@ -120,23 +122,25 @@
   overflow: hidden;
   display: none;
   margin-top: -1px;
-  padding: 0;
+  padding: 5px 0;
   position: absolute;
   z-index: 1000;
   background: #fff;
-  color: #000;
-  border: 1px solid #aaa;
-  border-radius: 4px;
+  color: #252525;
+  border: 1px solid #bbb;
+  border-radius: 2px;
 }
 
 .ms-drop.bottom {
   top: 100%;
-  box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+  border-radius: 0 0 2px 2px;
 }
 
 .ms-drop.top {
   bottom: 100%;
-  box-shadow: 0 -4px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 -4px 5px rgba(0, 0, 0, .175);
+  border-radius: 2px 2px 0 0;
 }
 
 .ms-search {
@@ -158,8 +162,8 @@
   padding: 0 5px;
   margin: 0;
   outline: 0;
-  font-family: sans-serif;
-  border: 1px solid #aaa;
+  font-family: 'Open Sans', sans-serif;
+  border: 1px solid #bbb;
   border-radius: 5px;
   box-shadow: none;
 }
@@ -220,12 +224,12 @@
 }
 
 .ms-drop ul>li.hide-radio:focus, .ms-drop ul>li.hide-radio:hover {
-  background-color: #f8f9fa;
+  background-color: #eee;
 }
 
 .ms-drop ul>li.hide-radio.selected {
   color: #fff;
-  background-color: #007bff;
+  background-color: #005cc8;
 }
 
 .ms-drop ul>li.hide-radio label {
