--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,6 +1,6 @@
 // KU cookie accept box1
-.modal-open {
-    overflow: initial;
+.ccc.popup-open {
+  overflow: initial;
 }
 .ccc {
   position: fixed;
