--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -1,7 +1,7 @@
 // KU cookie accept box1
-.ccc.popup-open {
-  overflow: initial;
-}
+// .ccc.popup-open {
+//   overflow: hidden;
+// }
 .ccc {
   position: fixed;
   bottom: 0;
@@ -10,7 +10,7 @@
   padding: 0;
   color: @white-color;
   background-color: rgba(@ku-cookiebox-bg, .96);
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 100%;
   width: 100%;
   z-index: (@zindex-modal + 1);
