Utility menu margin

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -272,57 +272,57 @@
   font-weight: 600;
 }
 // KU privacy policy box
-@media (min-width: @screen-xs-max) {
-  .privacy-policy {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 1020!important;
-    height: auto;
-    padding: 40px;
-    color: @white-color;
-    font-weight: 600;
-    background: @ku-cookiebox-bg;
-
-    .h2 {
-      font-weight: 700;
-      margin-top: 0;
-    }
-
-    p {
-      margin: 0 0 2px;
-    }
-
-    .btn {
-      #gradient.vertical(@gray-lighter; darken(@gray-lighter, 12%); 0%; 100%);
-      color: @ku-red;
-      padding: 6px 23px;
-      font-size: 1.3em;
-      font-weight: bold;
-      text-transform: uppercase;
-    }
-
-    .laes_mere_cookies {
-      color: @white-color;
-      text-decoration: underline;
-      display: inline-block;
-      margin-top: 16px;
-
-      &:before {
-        content: "\00bb";
-        color: inherit;
-        display: inline-block;
-        font-size: 1.4em;
-        margin-right: 5px;
-        top: 1px;
-        position: relative;
-      }
-    }
-  }
-}
-@media (max-width: @screen-xs-max) {
-  .privacy-policy {
-    display: none;
-  }
-}
+// @media (min-width: @screen-xs-max) {
+//   .privacy-policy {
+//     position: fixed;
+//     bottom: 0;
+//     right: 0;
+//     left: 0;
+//     z-index: 1020!important;
+//     height: auto;
+//     padding: 40px;
+//     color: @white-color;
+//     font-weight: 600;
+//     background: @ku-cookiebox-bg;
+//
+//     .h2 {
+//       font-weight: 700;
+//       margin-top: 0;
+//     }
+//
+//     p {
+//       margin: 0 0 2px;
+//     }
+//
+//     .btn {
+//       #gradient.vertical(@gray-lighter; darken(@gray-lighter, 12%); 0%; 100%);
+//       color: @ku-red;
+//       padding: 6px 23px;
+//       font-size: 1.3em;
+//       font-weight: bold;
+//       text-transform: uppercase;
+//     }
+//
+//     .laes_mere_cookies {
+//       color: @white-color;
+//       text-decoration: underline;
+//       display: inline-block;
+//       margin-top: 16px;
+//
+//       &:before {
+//         content: "\00bb";
+//         color: inherit;
+//         display: inline-block;
+//         font-size: 1.4em;
+//         margin-right: 5px;
+//         top: 1px;
+//         position: relative;
+//       }
+//     }
+//   }
+// }
+// @media (max-width: @screen-xs-max) {
+//   .privacy-policy {
+//     display: none;
+//   }
+// }
