--- a/less/navbar.less
+++ b/less/navbar.less
@@ -340,11 +340,7 @@
 
 #topbar_menu {
   height: 100%;
-  margin-right: 0;
-  @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
-    // iPad
-    font-size: 12px;
-  }
+  margin-right: 17px;
   font-size: 13px;
 
   &.navbar-nav {
