--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -279,12 +279,16 @@
     padding: 9px;
   }
 
+  p {
+    margin: 6px 0 9px;
+  }
+
   .cookiefilter-header {
     font-size: 14px;
     line-height: 18px;
 
     &+ p {
-      &:first-child {
+      &:first-of-type {
         display: none;
       }
     }
