--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -232,8 +232,7 @@
   @media (max-width: @screen-sm-max) {
     padding: 10px;
   }
-  // background: transparent url("https://cms.ku.dk/grafik/beredskab.png") no-repeat center left;
-  // background-size: 100px;
+
   h1 {
     padding: 0;
     margin: 0 0 10px;
@@ -437,7 +436,7 @@ form.gdpr-accept {
     }
   }
 
-  &:before {
+  &::before {
     font-size: 90px;
     color: rgba(@gray-base, .06);
     .icon;
