--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -29,12 +29,12 @@
   table {
     border: 1px dotted @table-border-color;
 
-    > tfoot,
+    > tbody,
      > thead,
-    > tbody {
+    > tfoot {
       > tr {
-        > th,
-        > td {
+        > td,
+        > th {
           border: 1px dotted @table-border-color;
         }
       }
@@ -44,9 +44,9 @@
   .slide-wrapper,
   .slideshow {
     visibility: visible;
-    height: 289px;
+    height: @gridbox1;
     overflow: hidden;
-    border: 1px solid #ccc;
+    border: 1px solid @gray;
     position: relative;
   }
 
@@ -55,7 +55,6 @@
     content: "Slideshow...";
     top: 50%;
     left: 50%;
-    -webkit-transform: translatex(-50%) translatey(-50%);
     transform: translatex(-50%) translatey(-50%);
     position: absolute;
     z-index: 10;
@@ -95,11 +94,9 @@
 }
 // Editor accordions popup dialog
 
-body {
-  &.editor-accordions {
-    background-color: #fbfbf7;
-    padding: 0 15px;
-  }
+.editor-accordions {
+  background-color: #fbfbf7;
+  padding: 0 15px;
 }
 
 .accordion-hidden {
@@ -117,32 +114,30 @@ body {
   }
 }
 
-body {
-  &.mce-content-body {
-    // Put cursor below accordions
-    .accordion-hidden {
-      display: block;
-      margin: 5px 0;
+.mce-content-body {
+  // Put cursor below accordions
+  .accordion-hidden {
+    display: block;
+    margin: 5px 0;
 
-      &::before {
-        content: 'Klik her, og derefter p\00e5 \00a0 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
-        color: @gray-light;
-        vertical-align: middle;
+    &::before {
+      content: 'Klik her, og derefter p\00e5 \00a0 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
+      color: @gray-light;
+      vertical-align: middle;
 
-        html:lang(en) & {
-          content: 'Place cursor here and click the icon in the toolbar to add a new accordion:';
-        }
+      html:lang(en) & {
+        content: 'Place cursor here and click the icon in the toolbar to add a new accordion:';
       }
+    }
 
-      &::after {
-        font-family: "Glyphicons Halflings";
-        content: "\e236";
-        vertical-align: middle;
-      }
-      // - but hide sibsequent cursor blocks
-      + .accordion-hidden {
-        display: none;
-      }
+    &::after {
+      font-family: "Glyphicons Halflings";
+      content: "\e236";
+      vertical-align: middle;
+    }
+    // - but hide sibsequent cursor blocks
+    + .accordion-hidden {
+      display: none;
     }
   }
 }
