--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -29,12 +29,12 @@
   table {
     border: 1px dotted @table-border-color;
 
-    > tbody,
+    > tfoot,
      > thead,
-    > tfoot {
+    > tbody {
       > tr {
-        > td,
-        > th {
+        > th,
+        > td {
           border: 1px dotted @table-border-color;
         }
       }
@@ -117,27 +117,35 @@
 .mce-content-body {
   // Put cursor below accordions
   .accordion-hidden {
-    display: block;
-    margin: 5px 0;
+    none: display;
+  }
 
-    &::before {
-      content: 'Klik her, og derefter p\00e5 \00a0 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
-      color: @gray-light;
-      vertical-align: middle;
+  .panel-accordion {
+    & + .accordion-hidden {
+      display: block;
+      margin: 5px 0;
 
-      html:lang(en) & {
-        content: 'Place cursor here and click the icon in the toolbar to add a new accordion:';
+      &::before {
+        content: 'Klik her, og derefter p\00e5 \00a0 ikonet i v\00e6rkt\00f8jslinjen for at tilf\00f8je et nyt accordion:';
+        color: @gray-light;
+        vertical-align: middle;
+
+        html:lang(en) & {
+          content: 'Place cursor here and click the icon in the toolbar to add a new accordion:';
+        }
+      }
+
+      &::after {
+        font-family: "Glyphicons Halflings";
+        content: "\e236";
+        vertical-align: middle;
       }
     }
-
-    &::after {
-      font-family: "Glyphicons Halflings";
-      content: "\e236";
-      vertical-align: middle;
-    }
-    // - but hide sibsequent cursor blocks
-    + .accordion-hidden {
-      display: none;
-    }
   }
+  // .accordion-hidden {
+  //   // - but hide sibsequent cursor blocks
+  //   + .accordion-hidden {
+  //     display: none;
+  //   }
+  // }
 }
