Editor accordion fix

--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -115,13 +115,9 @@
 }
 
 .mce-content-body {
-  // Put cursor below accordions
-  .accordion-hidden {
-    none: display;
-  }
-
   .panel-accordion {
     & + .accordion-hidden {
+      // Display an option to insert more adjecent accordions:
       display: block;
       margin: 5px 0;
 
