--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -243,6 +243,9 @@
 
       &:first-child {
         margin-right: floor((@grid-gutter-width * 2));
+        background-color: transparent;
+        border-color: @gray-888;
+        color: @white-color;
       }
     }
   }
