--- a/docs/assets/css/ku-neutral/clean-base.less
+++ b/docs/assets/css/ku-neutral/clean-base.less
@@ -50,6 +50,11 @@
   left: 13px;
 }
 
+.ku-branding .ku-branding-text > a {
+  height: 100%;
+}
+
+
 .ku-branding {
   &::after {
     border-bottom: 1px solid @gray-666!important;
