--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -240,6 +240,9 @@
   }
 
   button {
+    @media (min-width: @screen-sm-max) {
+      display: flex;
+    }
     text-transform: none;
     font-size: 14px;
     padding: 10px;
