--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -240,8 +240,8 @@
   }
 
   button {
-    @media (min-width: @screen-sm-max) {
-      display: flex;
+    @media (max-width: @screen-xs-max) {
+      flex: 1;
     }
     text-transform: none;
     font-size: 14px;
