--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -448,6 +448,10 @@ form.gdpr-accept {
   }
 }
 
+.radiolabel, .gdpr-label {
+  font-weight: 400;
+}
+
 #symplifysignupform {
   .gdpr-accept {
     position: relative;
