--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -103,9 +103,9 @@
   width: 100%;
 }
 //Fix viewport width on Windows phone: http://getbootstrap.com/getting-started/#support-ie10-width
-@-ms-viewport {
-  width: device-width;
-}
+// @-ms-viewport {
+//   width: device-width;
+// }
 // Global scroll to top
 
 .scrolltop {
