--- a/less/responsive-utilities.less
+++ b/less/responsive-utilities.less
@@ -15,9 +15,9 @@
 // Docs: http://getbootstrap.com/getting-started/#support-ie10-width
 // Source: http://timkadlec.com/2013/01/windows-phone-8-and-device-width/
 // Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
-@-ms-viewport {
-  width: device-width;
-}
+// @-ms-viewport {
+//   width: device-width;
+// }
 // Visibility utilities
 // Note: Deprecated .visible-xs, .visible-sm, .visible-md, and .visible-lg as of v3.2.0
 
