--- a/less/type.less
+++ b/less/type.less
@@ -471,13 +471,11 @@ address {
 }
 // KU:
 
-h2 {
-  &.deloverskrift {
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.7px;
-    margin: 20px 0 0 0;
-    padding: 0 5px 8px 0;
-    border-bottom: 1px solid @ku-grey-border;
-  }
+.deloverskrift {
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.7px;
+  margin: 20px 0 0;
+  padding: 0 5px 8px 0;
+  border-bottom: 1px solid @ku-grey-border;
 }
