Boxtop for special cases

--- a/less/panels.less
+++ b/less/panels.less
@@ -331,7 +331,7 @@
 }
 // Different boxtop for full-width panels
 
-:not(.right-side), :not(#gridsidebar) {
+.main-content {
   .single-column {
     .panel-default {
       & > .panel-heading {
