--- a/less/badges.less
+++ b/less/badges.less
@@ -19,9 +19,9 @@
   border-radius: @badge-border-radius;
 
   // Empty badges collapse automatically (not available in IE8)
-  &:empty {
-    display: none;
-  }
+  // &:empty {
+  //   display: none;
+  // }
 
   // Quick fix for badges in buttons
   .btn & {
