Adjusting footer margin

--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -226,7 +226,7 @@
         .footer-heading {
           cursor: pointer;
           position: relative;
-          padding: 12px 25px 12px 20px;
+          padding: @grid-gutter-by-half @grid-gutter-by-half 12px @grid-gutter-by-half;
           margin-top: 0 !important;
 
           &[data-heading='open'] {
@@ -292,7 +292,7 @@
 
             a {
               color: @ku-light-grey;
-              padding: @padding10 @padding20;
+              padding: @padding10 @grid-gutter-by-half;
               display: block;
               border-bottom: 1px solid @gray;
 
