Footer social icons

--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -317,7 +317,7 @@
     }
 
     .social-items {
-      padding: 0 @padding20 @padding20;
+      padding: 0 @grid-gutter-by-half  @grid-gutter-height @grid-gutter-by-half;
       width: 100%;
 
       .social-item {
